[project]
name = "steam-web-tools"
version = "1.1"
authors = [
  { name="Sean-e", email="seane410@gmail.com" },
]
description = "A simple Python library to interact with the Return YouTube Dislike API"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JrGamer410/steam-web-tools"
Issues = "https://github.com/JrGamer410/steam-web-tools/issues"